edit readme and refactor scripts